# cyberrescue

./: .gitignore  Dockerfile  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/app/: config.py  deps.py  logging_config.py  main.py  middleware.py
backend/app/routes/: containers.py  narrative.py
backend/tests/: conftest.py  test_rate_limit.py  test_routes.py
demo/broken_flask/: app.py
demo/crashed_nginx/: nginx.conf
demo/leaking_node/: Dockerfile  index.js
infra/: Caddyfile  README.md  docker-compose.yml  reset_demo.py
infra/systemd/: cyberrescue-backend.service  cyberrescue-reset.service  cyberrescue-reset.timer
scratch_node/: package-lock.json
src/cyberrescue/: core.py  demo_policy.py  security.py  server.py
tests/: test_demo_policy.py  test_retry.py  test_server.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/containers/[name]/: page.tsx
web/components/: ContainerCard.tsx  DiagnosticMenu.tsx  LogViewer.tsx  NarrativePanel.tsx  StatusBadge.tsx
web/lib/: api.ts  types.ts
