[project]
name = "cyberrescue"
version = "0.1.0"
description = "Local MCP server for debugging Docker containers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "python-on-whales>=0.73.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cyberrescue"]

[tool.uv.workspace]
members = ["backend"]

[tool.uv.sources]
cyberrescue = { workspace = true }
