[project]
name = "cyberrescue-backend"
version = "0.1.0"
description = "Public web demo backend for CyberRescue — FastAPI wrapper scoped to the 3 sandboxed demo containers"
requires-python = ">=3.12"
dependencies = [
    "cyberrescue",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "slowapi>=0.1.9",
    "anthropic>=0.40.0",
    "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.uv.sources]
cyberrescue = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
